nginx-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        visualize: "true"
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.13.6
        ports:
        - containerPort: 80
